# autonav_software_2024

./: .gitignore  Dockerfile  README.md  setup.sh  visualize_data.py
.github/: compile_run.yaml
autonav_ws/: .gitignore
autonav_ws/autonav_filters/: CMakeLists.txt  package.xml
autonav_ws/autonav_filters/include/autonav_filters/: motor_feedback_example.hpp  particle_filter.hpp
autonav_ws/autonav_filters/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
autonav_ws/autonav_filters/install/autonav_filters/share/autonav_filters/: local_setup.dsv  package.sh  package.xml  package.zsh
autonav_ws/autonav_filters/log/: latest_build
autonav_ws/autonav_filters/src/: filters.cpp  filters_node.cpp  motor_feedback_example.cpp  motor_feedback_example_node.cpp  my_node.cpp  particle_filter  particle_filter.cpp  particle_filter.hpp  particle_filter_GPSFeedback_test.cpp  particle_filter_messages_test.cpp  particle_filter_motor_feedback_test.cpp  particle_filter_position_test.cpp
autonav_ws/autonav_filters/tests/: motor_feedback_test.cpp  particle_filter_test.cpp
autonav_ws/autonav_messages/: CMakeLists.txt  package.xml
autonav_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
autonav_ws/log/: latest_build
autonav_ws/scr-core/include/scr-core/: node.h
autonav_ws/scr-core/src/: node.cpp
autonav_ws/src/autonav_core/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_core/src/: core.cpp  logger.cpp  performance_timer.cpp  robot_state_manager.cpp
autonav_ws/src/autonav_core/tests/: logger_test.cpp  performance_timer_test.cpp
autonav_ws/src/autonav_core_2/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_core_2/autonav_core_2/: core.py
autonav_ws/src/autonav_core_2/include/autonav_core/: core.h  performance_timer.hpp
autonav_ws/src/autonav_core_2/tests/: logger_test.cpp
autonav_ws/src/autonav_display/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_display/src/: _BAK_display.py  display.cpp  display.py
autonav_ws/src/autonav_example/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_example/src/: example.cpp  example.py
autonav_ws/src/autonav_filters/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_filters/include/autonav_filters/: cstuff  cstuff.cpp  csv_utils.hpp  filters.hpp  gps_feedback_example.hpp  motor_feedback_example.hpp  particle_filter.hpp  position_graph.py  rapidcsv.h  testing_feedback  testing_feedback.cpp  testing_gps  testing_gps.cpp
autonav_ws/src/autonav_filters/src/: deadrekt.py  filters.cpp  filters.py  filters_node.cpp  motor_feedback_example.cpp  motor_feedback_example_node.cpp  particlefilter.py
autonav_ws/src/autonav_filters/tests/: ENTRY_FEEDBACK.csv  ENTRY_FEEDBACK_comp.csv  ENTRY_GPS.csv  ENTRY_GPS_comp.csv  motor_feedback_test.cpp  particle_filter_test.cpp  rapidcsv_test.c++  rapidcsv_test.cpp  simulator_feedback.csv  simulator_gps.csv
autonav_ws/src/autonav_launch/launch/: competition copy.xml  competition.xml  cpp_pf_sim.xml  managed_steam.xml  practice.xml  practice_cpp_pf.xml  simulation.xml  simulationpy.xml  test.xml
autonav_ws/src/autonav_manual/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_manual/src/: remote.cpp  remote_steamcontroller.cpp  steam.py
autonav_ws/src/autonav_messages/: package.xml
autonav_ws/src/autonav_msgs/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_msgs/msg/: CameraCalibration.msg  DeviceState.msg  RobotState.msg
autonav_ws/src/autonav_msgs/srv/: Test.srv
autonav_ws/src/autonav_nav/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_nav/include/: astar.h
autonav_ws/src/autonav_nav/include/autonav_nav/: astar.h
autonav_ws/src/autonav_nav/src/: astar.cpp  astar.py  astar_node.cpp  path_resolver.py  requirements.txt
autonav_ws/src/autonav_pathing/: CMakeLists.txt
autonav_ws/src/autonav_playback/: package.xml
autonav_ws/src/autonav_playback/src/: playback.py
autonav_ws/src/autonav_serial/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_serial/src/: camera.py  safety_lights.py  serial_node.py  vectornav.cpp
autonav_ws/src/autonav_unet/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_unet/src/: expandify.cpp  transformations.py
autonav_ws/src/autonav_vision/: CMakeLists.txt  package.xml
autonav_ws/src/autonav_vision/src/: camera_node.py  circumscriber.py  combination.py  expandify.cpp  transformation_node.py  transformations.py  transformations_cnn.py
autonav_ws/src/autonav_vision/src/results/: SCRUNet_model.keras
autonav_ws/src/scr/: CMakeLists.txt  package.xml
autonav_ws/src/scr/scr/: constants.py  node.py  states.py  utils.py
autonav_ws/src/scr/src/: node.cpp
autonav_ws/src/scr_controller/: CMakeLists.txt  package.xml
autonav_ws/src/scr_controller/src/: core.cpp  logging.cpp
autonav_ws/src/scr_core/: CMakeLists.txt  package.xml
autonav_ws/src/scr_core/include/scr_core/: node.h  performance_timer.hpp
autonav_ws/src/scr_core/src/: performance_timer.cpp
autonav_ws/src/scr_core/tests/: performance_timer_test.cpp
autonav_ws/src/scr_msgs/: CMakeLists.txt
autonav_ws/src/scr_msgs/msg/: ConfigUpdated.msg
autonav_ws/src/scr_msgs/srv/: DeletePreset.srv  GenericService.srv  GetPresets.srv  SaveActivePreset.srv  UpdateConfig.srv  UpdateDeviceState.srv  UpdateSystemState.srv
data/: ENTRY_POSITION.csv  ENTRY_POSITION_1.csv  waypionts.csv  waypoints.csv  waypoints_editor.py
display/: index.html
display/scripts/: globals.js  main.js  utilities.js
display/styles/: index.css
firmware/estop_remote/: estop_remote.ino
firmware/motor_control/: CANBusDriver.h  CONBus.h  conbus_params.h  differential_drive.h  motor_control.ino
firmware/safety_lights/: safety_lights.ino
install/: local_setup.sh  setup.bash  setup.sh
local/: autonav.rules
log/: latest_build
scripts/: normal_distro_test.cpp  particlefilter.cpp
scripts/create_cmakelists/: README.md
scripts/format_package/: CMakeListsFormat.txt  README.md  packageFormat.txt
setup/: setup.sh
setup/etc/: autonav.rules  autonav.service  autonav_service.sh
src/: particlefilter.cpp
temp/: a.out  astar.cpp
(+130 files in other folders)
